--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="phonegap.js"></script>
     <script type="text/javascript" src="mycode.js"></script>
     <script type="text/javascript">
-        app.init();
+        init();
     </script>
 </body>
 
