--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,10 @@
     <script type="text/javascript">
         init();
     </script>
+     
+       <input type="button" value="Start recording" onclick="start_recording()" />
+       <input type="button" value="Stop recording" onclick="stop_recording()" />
+
 </body>
 
 </html>
