--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,8 @@
 
     <script type="text/javascript" src="phonegap.js"></script>
     <script type="text/javascript" src="mycode.js"></script>
+    <script type="text/javascript" src="gps-code.js"></script>
+                                         
     <script type="text/javascript">
         init();
     </script>
