--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,8 @@
      
        <input type="button" value="Start recording" onclick="start_recording()" />
        <input type="button" value="Stop recording" onclick="stop_recording()" />
+       <input type="text" id="tbLongitude" value="Longitude"   />
+	  <input type="text" id="tbLatitude" value="Latitude" />
 
 </body>
 
