--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,8 @@
        
      </div>
 
-    <script type="text/javascript" src="phonegap.js"></script>
+    <!--  <script type="text/javascript" src="phonegap.js"></script>  -->
+    <script type="text/javascript" src="cordova.js"></script>	
     <script type="text/javascript" src="mycode.js"></script>
     <script type="text/javascript" src="gps-code.js"></script>
                                          
