--- a/www/index.html
+++ b/www/index.html
@@ -13,11 +13,11 @@
     <script type="text/javascript" src="mycode.js"></script>
     <script type="text/javascript" src="gps-code.js"></script>
                                          
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         init();
-    </script>
+    </script>  -->
      
-       <input type="button" value="Start recording" onclick="start_recording()" />
+       <input type="button" value="Init" onclick="init()" />
        <input type="button" value="Stop recording" onclick="stop_recording()" />
        <input type="text" id="tbLongitude" value="Longitude"   />
 	  <input type="text" id="tbLatitude" value="Latitude" />
