added two lists

--- a/www/index.html
+++ b/www/index.html
@@ -10,8 +10,8 @@
 
     <!--  <script type="text/javascript" src="phonegap.js"></script>  -->
     <script type="text/javascript" src="cordova.js"></script>	
-    <script type="text/javascript" src="mycode.js"></script>
-    <script type="text/javascript" src="gps-code.js"></script>
+    <!--<script type="text/javascript" src="mycode.js"></script>
+    <script type="text/javascript" src="gps-code.js"></script> -->
                                          
     <!-- <script type="text/javascript">
         init();
@@ -21,6 +21,23 @@
        <input type="button" value="Stop recording" onclick="stop_recording()" />
        <input type="text" id="tbLongitude" value="Longitude"   />
 	  <input type="text" id="tbLatitude" value="Latitude" />
+
+	<p> For up-to-date information on the PowerGage app, go to <b>www.BikePowerGauge.org</b></p>
+	<h> To measure power data during a ride:</h>
+	<ol>
+		<li> From the <b>Home</b> page, press the RECORD button</li>
+		<li> Press the PAUSE button to pause recording </li>
+		<li> Press SAVE to end recording</li>
+		<li> The App will then jump to the <b>Summary</b> page, 
+		which shows ride summary data such as average power</li>
+	</ol>
+	<ol></ol> <p> Other tips </p>
+	<ol>
+		<li> Use the <b>Setup</b> page to fine tune data for estimating your power output</li>
+		<li> After the ride, use the web app at www.BikePowerGauge.org
+		to plot and analyze your ride data</li>
+		<li> Also see the web app for directions for using a coast down test to measure your own drag coefficient</li>
+	</ol>
 
 </body>
 
